fixed caption going off screen

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ resume, bio, etc.*/
   left: 70%;
   color: black;
   align-content: baseline;
-  width: 100%;
+  width: 28.35%;
   background-color: white;
   margin-top: 50%;
   margin-bottom: 50px;
